--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -39,6 +39,13 @@
             android:paddingLeft="4dp"
             android:orientation="vertical">
 
+            <LinearLayout
+                android:layout_width="0px"
+                android:layout_height="0px"
+                android:focusable="true"
+                android:focusableInTouchMode="true" />
+
+
             <!-- Name field -->
             <EditText
                 android:id="@+id/edit_pet_name"
