--- a/app/src/main/res/layout/activity_catalog.xml
+++ b/app/src/main/res/layout/activity_catalog.xml
@@ -18,13 +18,13 @@
     android:layout_height="match_parent"
     tools:context=".CatalogActivity">
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
     <!-- Empty view for the list -->
-    <RelativeLayout
+   <!-- <RelativeLayout
         android:id="@+id/empty_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -59,7 +59,7 @@
             android:text="@string/empty_view_subtitle_text"
             android:textAppearance="?android:textAppearanceSmall"
             android:textColor="#A2AAB0"/>
-    </RelativeLayout>
+    </RelativeLayout>-->
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
